css/style.css
html {
  font-family: 'Alegreya Sans', sans-serif;
  font-size: 16px;
  color: #494949;
}
h1 {
  font-size: 5rem;
  font-weight: bold;
}
h2 {
  font-size: 3rem;
  font-weight: bold;
}
h3 {
  font-size: 2rem;
  font-weight: bold;
}
p {
  font-size: 1.5rem;
}
@media only screen and (max-width: 1150px)  {
.desktop {
    display: none;
  }
}
@media only screen and (min-width: 1150px)  {
.mobile {
    display: none;
  }
}
header {
  height: 4rem;
  display: flex;
  justify-content: space-between;
  padding: 0 1.5rem;
}
.logo {
  display: inline-flex;
  align-self: center;
}
.logo img {
  height: 4rem;
}
.logo span {
  font-size: 2rem;
  font-weight: bold;
  color: #494949;
  text-transform: uppercase;
  align-self: center;
}
@media only screen and (max-width: 1150px)  {
.logo {
    display: none;
  }
}
.mobilenav {
  align-self: center;
  width: 100%;
}
.mobilenav ul {
  display: flex;
  justify-content: space-between;
}


#greylogo {
  color: #A6A6A6;
  font-weight: normal;
}
nav {
  display: inline-flex;
  align-self: center;
}
@media only screen and (max-width: 1150px)  {
  nav {
    display: none;

  }
}
@media only screen and (min-width: 1150px)  {
  .mobilenav {
    display: none;
  }
}

nav li {
  display: inline-block;
  padding: .5rem;
  font-size: 1.5rem;
}
.section {
display: flex;
}
.grey {
  background-color: #D7D7D7
}
.white {
  background-color: ##FFFFFF
}
.first {
}
@media only screen and (max-width: 1150px)  {
.first {
    flex-direction: column;
    width: 100%;
  }
}
@media only screen and (max-width: 1150px)  {
.first .leftcontainer {
  margin: 0;
  width: 100%;
  }
}

.learn {
  display:flex;
  flex-direction: column;
  justify-content: center;
  padding-left: 2rem;
  width: 40%;
}
@media only screen and (max-width: 1150px)  {
  .learn {
    width: 95%;
    margin: 0;
    padding: 2rem 0 2rem 2rem;
  }
}
.learn span {
  font-size: 1.5rem;
  color: white;
  background-color: #494949;
  display: flex;
  justify-content: center;
  padding: .5rem 0;
  width: 60%;
}
.learn h2{
padding: 2rem 0;
}



.second{
  align-items: flex-start;
}
.leftcontainer {
  display:flex;
  flex-direction: column;
  width: 60%;
  margin: 2rem 1.5rem;
}


@media only screen and (max-width: 1150px)  {
.second .leftcontainer {
    display: none;
  }
}

.leftcontainer h2 {
  margin-top: 2rem;
  margin-bottom: 2rem;
}
.leftcontainer img {
  width: 100%;
}
.second .leftcontainer p {
  padding-bottom: 5rem;
}
.right-containers {
  width: 40%;
  margin-top: 1rem;
}
@media only screen and (max-width: 1150px)  {
.right-containers {
    width: 95%;
  }
}
.side-container {
  display:flex;
  flex-direction: column;
  justify-content: center;
}
.side-container h3{
    margin-bottom: 1rem;
  }
@media only screen and (max-width: 1150px)  {
.side-container {
    margin-left: 2rem;
  }
}
.pictureandside {
  display: flex;
  border-bottom: lightgrey solid 1px;
}
@media only screen and (max-width: 1150px)  {
.pictureandside {
    flex-direction:column;
  }
}
.pictureandside img {
  width: 35%;
  padding: 1rem;
}
@media only screen and (max-width: 1150px)  {
.pictureandside img {
    width: 100%;
  }
}
@media only screen and (max-width: 1150px)  {
.pictureandside.grey {
    background-color: white;
  }
}
.side-container span {
  margin-top: 1rem;
  margin-bottom: 2rem;
  font-size: 1.5rem;
  font-weight: bold;
  color: #93BCEB;
}



.third {
  display:flex;
  flex-direction: column;
}
@media only screen and (max-width: 1150px)  {
.third.section.grey {
    background-color: white;
    border-bottom: lightgrey solid 1px;
  }
}
.third h2 {
  padding: 2rem 0 1rem 0;
  text-align: center;
}
.grid {
  display:flex;
  flex-direction: row;
  flex-flow: wrap;
  justify-content: center;
  margin-bottom: 2rem;
}
@media only screen and (max-width: 1150px)  {
.grid {
    display: flex;
    flex-direction: column;
  }
}
.gridbox {
  background-color: white;
  margin: 1rem;
}
@media only screen and (max-width: 1150px)  {
.gridbox {
    margin:0 1rem 0 1rem;
  }
}
.gridbox img {
  height: auto;
}
@media only screen and (max-width: 1150px)  {
.gridbox img,
.gridboxtext span,
.gridbox p {
    display:none;
  }
}
@media only screen and (max-width: 1150px)  {
.gridboxtext h3 {
    background-color: #D7D7D7;
    padding: 1rem 0 1.5rem 1rem;
  }
}
.gridboxtext {
  padding: 1rem 0 1.5rem 1rem;
}
@media only screen and (max-width: 1150px)  {
.gridboxtext {
    padding: 0 0 .5rem 0;
  }
}
.gridbox span {
  line-height: 4rem;
  font-size: 1.5rem;
  text-transform: uppercase;
}





.fourth {
  display:flex;
  flex-direction: column;
}
.fourth h2{
  text-align: center;
  display: block;
  margin: 2rem 0;
}
.subexhibit {
  display:flex;
}
@media only screen and (max-width: 1150px)  {
.subexhibit .right-containers {
    display:none;
  }
}
@media only screen and (max-width: 1150px)  {
.subexhibit .leftcontainer {
    width: 100%;
  }
}
@media only screen and (max-width: 1150px)  {
.subexhibit .leftcontainer h3,
.subexhibit .leftcontainer p {
    display:none;
  }
}
.subexhibit .leftcontainer h3 {
  margin-bottom: .5rem;
}
video {
  width: 100%;
  margin-bottom: 1.5rem;
}
.extra {
  margin-top: 1rem;
}






footer {
  display: flex;
  justify-content: space-between;
  padding: 1rem 1.5rem;
  border-top: lightgrey solid 1px;
  font-size: 1.5rem;
}
.leftfooter {
}
.rightfooter {
}
@media only screen and (max-width: 1150px)  {
.rightfooter {
    display:none;
  }
}
.rightfooter li {
  display: inline-block;
  padding: .5rem;
  font-weight: bold;
}

